--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "prisma": "^5.20.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^11.0.3"
   }
 }
