--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "tawkto-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "postinstall": "prisma generate"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
