--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "set \"NODE_ENV=production\" && nodemon server.js",
+    "dev": "set \"NODE_ENV=development\" && nodemon server.js"
   },
   "keywords": [],
   "author": "",
